Java 17 work: new URL() -> new URI().toURL(); added --add-exports to surefire config; added support for Java-version specific regression test reference files