@@ -15,7 +15,7 @@
 
 /*
  * AbstractRESTClientTransformer.java
- * Copyright (C) 2018 University of Waikato, Hamilton, New Zealand
+ * Copyright (C) 2018-2024 University of Waikato, Hamilton, New Zealand
  */
 package adams.flow.rest;
 
@@ -26,7 +26,7 @@ import adams.event.RESTClientProducerResponseDataEvent;
 import adams.event.RESTClientProducerResponseDataListener;
 import adams.flow.core.Actor;
 
-import java.net.URL;
+import java.net.URI;
 import java.util.HashSet;
 import java.util.logging.Level;
 
@@ -207,7 +207,7 @@ public abstract class AbstractRESTClientTransformer<I, O>
   public void setAlternativeURL(String value) {
     if ((value != null) && !value.isEmpty()) {
       try {
-        new URL(value);
+        new URI(value).toURL();
         m_AlternativeURL = value;
         reset();
       }
