@@ -13,9 +13,9 @@
  *   along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-/**
+/*
  * AbstractWebServiceClientSource.java
- * Copyright (C) 2012-2017 University of Waikato, Hamilton, New Zealand
+ * Copyright (C) 2012-2024 University of Waikato, Hamilton, New Zealand
  */
 package adams.flow.webservice;
 
@@ -27,6 +27,7 @@ import adams.event.WebServiceClientProducerResponseDataListener;
 import adams.flow.core.Actor;
 import adams.flow.webservice.interceptor.incoming.AbstractInInterceptorGenerator;
 
+import java.net.URI;
 import java.net.URL;
 import java.util.HashSet;
 import java.util.logging.Level;
@@ -35,7 +36,6 @@ import java.util.logging.Level;
  * Ancestor for webservice clients.
  *
  * @author  fracpete (fracpete at waikato dot ac dot nz)
- * @version $Revision$
  * @param <O> the type of output data to handle
  */
 public abstract class AbstractWebServiceClientSource<O>
@@ -214,7 +214,7 @@ public abstract class AbstractWebServiceClientSource<O>
   public void setAlternativeURL(String value) {
     if ((value != null) && !value.isEmpty()) {
       try {
-	new URL(value);
+	new URI(value).toURL();
 	m_AlternativeURL = value;
 	reset();
       }
